hphp/hack/test/typecheck/lambda/lambda23.php.exp
File "lambda23.php", line 4, characters 10-10:
Invalid return type (Typing[4110])
File "lambda23.php", line 4, characters 11-16:
This is a string
File "lambda23.php", line 3, characters 27-29:
It is incompatible with an int
